Testing npme Install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Show the directory
-        run: ls
+        run: cd backend
+      - name: Install Node
+        run: npm install
+      - name: Run Tests
+        run: npm run test
       
